# suzuri

./: .gitignore  .pylintrc  DESCRIPTION  LICENSE  pyproject.toml
suzuri/: __init__.py  model.py  resources.py  template.py  wsgi.py
suzuri/auth/: facebook.py  google.py
suzuri/auth/google/: __init__.py  resources.py  urls.py
suzuri/conf/: __init__.py  global_settings.py
suzuri/media/: __init__.py  umsgpack.py
suzuri/storage/: __init__.py  base.py  mongodb.py  rethinkdb.py
suzuri/templates/: 404.pyhtml.cache  500.pyhtml  base.pyhtml  base.pyhtml.cache
suzuri/utils/: __init__.py
